
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int IAC ;
 int WILL ;
 int sprintf (char*,char*,int,int,int) ;
 int write (int,char*,int) ;

void will(int sd,int opt)
{
 char buf[3];
 sprintf(buf,"%c%c%c",IAC,WILL,opt);
        write(sd,buf,3);
}
