; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_89.c_will.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_89.c_will.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"%c%c%c\00", align 1
@IAC = common dso_local global i32 0, align 4
@WILL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @will(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca [3 x i8], align 1
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = getelementptr inbounds [3 x i8], [3 x i8]* %5, i64 0, i64 0
  %7 = load i32, i32* @IAC, align 4
  %8 = load i32, i32* @WILL, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @sprintf(i8* %6, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 %7, i32 %8, i32 %9)
  %11 = load i32, i32* %3, align 4
  %12 = getelementptr inbounds [3 x i8], [3 x i8]* %5, i64 0, i64 0
  %13 = call i32 @write(i32 %11, i8* %12, i32 3)
  ret void
}

declare dso_local i32 @sprintf(i8*, i8*, i32, i32, i32) #1

declare dso_local i32 @write(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
